UI Alignment fixes and removed unwanted codes

--- a/TZSmartLockers/wwwroot/css/dashboard.css
+++ b/TZSmartLockers/wwwroot/css/dashboard.css
@@ -100,14 +100,16 @@
     font-weight: 600;
     padding-top: 80px !important;
     padding-bottom: 12px !important;
+    font-weight: bold;
 }
 
 .table tbody tr {
-    border-bottom: 1px solid #ccc;
+    border-bottom: 2px solid #ccc;
+    height:60px;
 }
 
-    .table tbody tr:last-child {
-        border-bottom: none;
+    .table tbody tr:first-child {
+        border-top:5px solid #ccc ;
     }
 
 .lock-rotate-down {
@@ -119,8 +121,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 12px 15px;
-    border-top: 1px solid #ddd;
+    padding: 25px 21px;
+    margin: 0px 25px 0px 25px;
     font-size: 14px;
     position: relative;
 }
@@ -167,4 +169,15 @@
     height: 10px;
     line-height: 9px;
     border: none;
+}
+.align-middle {
+    margin: 0px;
+}
+.table-responsive {
+    margin:0px 25px 0px 25px;
+}
+.hr-line-solid {
+    border-bottom: 2px solid #ccc;
+    background-color: rgba(0, 0, 0, 0);
+    border-style: solid !important;
 }
